--- a/page_download/index.html
+++ b/page_download/index.html
@@ -7,17 +7,18 @@
     <title>MiniBuster</title>
     <link rel="icon" type="image/x-icon" href="/static/public/favicon/favicon.ico">
     <link rel="stylesheet" href="/static/assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/page_download/css.css">
 </head>
 <body>
-    <div class="row container d-flex align-items-center justify-content-center position-absolute top-50 start-50 translate-middle w-75 bg-danger">
-        <img class="brand-image col-5" src="/static/public/images/brand-image.png">
-        <div class="col-5 mx-5 row justify-content-center">
-            <div class="col-12 container d-flex align-items-center justify-content-center">
-                Descripcion mini buster Lorem ipsum dolor
-                 sit amet consectetur adipisicing elit. Quasi explicabo animi incidunt, earum reiciendis possimus velit saepe eveniet ex. Reiciendis nemo asperiores vel modi ut recusandae dicta iste. Quae, laudantium.
+    <div class="row cont container d-flex align-items-center justify-content-center mx-auto w-100">
+        <img class="brand-image mb-md-5 col-12 col-md-4 col-sm-5 col-xs-12" src="/static/public/images/brand-image.png">
+        <div class="col-12 col-md-6 col-sm-12 col-xs-12 mt-6 bg-white m-5 p-5 mx-5 row justify-content-center">
+            <div class="col-12 container justify-content-around pb-3 d-flex align-items-center justify-content-center">
+                ¡Bienvenido a MiniBuster! La aplicación web que transformará tu computadora de lenta y pesada a rápida y eficiente. A diferencia de otras aplicaciones, MiniBuster es súper ligera y solo tiene lo que necesitas. Su interfaz es una página web, lo que hace que su uso sea fácil y eficiente. ¡No esperes más para mejorar el rendimiento de tu computadora con MiniBuster!
             </div>
-             <a class="btn btn-primary col-8 col-md-9 col-sm-12 col-xs-12 btn-lg" href="/page_download/ClienteMosaico.exe" download="minibuster.exe" role="button">Descargar MiniBuster</a>
+            <a class="btn btn-primary col-12 col-md-9 col-sm-12 col-xs-12 btn-md" href="/page_download/MiniBuster.exe" download="MiniBuster.exe" role="button">Descargar MiniBuster</a>
         </div>
     </div>
+    <!-- <div class="image"></div> -->
 </body>
 </html>
