--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>MiniBuster</title>
     <link rel="icon" type="image/x-icon" href="/static/public/favicon/favicon.ico">
     <link rel="stylesheet" href="/static/assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/page_download/css.css">
+    <link rel="stylesheet" href="/static/assets/site/css/css-page-download.css">
 </head>
 <body>
     <div class="row cont container d-flex align-items-center justify-content-center mx-auto w-100">
@@ -16,7 +16,7 @@
             <div class="col-12 container justify-content-around pb-3 d-flex align-items-center justify-content-center">
                 ¡Bienvenido a MiniBuster! La aplicación web que transformará tu computadora de lenta y pesada a rápida y eficiente. A diferencia de otras aplicaciones, MiniBuster es súper ligera y solo tiene lo que necesitas. Su interfaz es una página web, lo que hace que su uso sea fácil y eficiente. ¡No esperes más para mejorar el rendimiento de tu computadora con MiniBuster!
             </div>
-            <a class="btn btn-primary col-12 col-md-9 col-sm-12 col-xs-12 btn-md" href="/page_download/MiniBuster.exe" download="MiniBuster.exe" role="button">Descargar MiniBuster</a>
+            <a class="btn btn-primary col-12 col-md-9 col-sm-12 col-xs-12 btn-md" href="/MiniBuster.exe" download="MiniBuster.exe" role="button">Descargar MiniBuster</a>
         </div>
     </div>
     <!-- <div class="image"></div> -->
