Edit files from page to download .exe

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MiniBuster</title>
     <link rel="icon" type="image/x-icon" href="/static/public/favicon/favicon.ico">
-    <link rel="stylesheet" href="/static/assets/bootstrap-5.0.2-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/assets/site/css/css-page-download.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="css-page-download.css">
 </head>
 <body>
     <div class="row cont container d-flex align-items-center justify-content-center mx-auto w-100">
-        <img class="brand-image mb-md-5 col-12 col-md-4 col-sm-5 col-xs-12" src="/static/public/images/brand-image.png">
+        <img class="brand-image mb-md-5 col-12 col-md-4 col-sm-5 col-xs-12" src="brand-image.png">
         <div class="col-12 col-md-6 col-sm-12 col-xs-12 mt-6 bg-white m-5 p-5 mx-5 row justify-content-center">
             <div class="col-12 container justify-content-around pb-3 d-flex align-items-center justify-content-center">
                 ¡Bienvenido a MiniBuster! La aplicación web que transformará tu computadora de lenta y pesada a rápida y eficiente. A diferencia de otras aplicaciones, MiniBuster es súper ligera y solo tiene lo que necesitas. Su interfaz es una página web, lo que hace que su uso sea fácil y eficiente. ¡No esperes más para mejorar el rendimiento de tu computadora con MiniBuster!
